# NNV12

./: README.md  benchncnn1.cpp  setup.py
.github/workflows/: android-armv7-cpu.yml  android-armv7-gpu.yml  android-armv8-cpu.yml  android-armv8-gpu.yml  android-x64-cpu.yml  android-x64-gpu.yml  android-x86-cpu.yml  android-x86-gpu.yml  codeql-analysis.yml  elf-riscv32-cpu-gcc.yml  elf-riscv64-cpu-gcc.yml  ios-arm64-gpu.yml  ios-cpu.yml  ios-simulator.yml  linux-aarch64-cpu-gcc.yml  linux-arm-cpu-gcc.yml  linux-mips-cpu-gcc.yml  linux-mips64-cpu-gcc.yml  linux-ppc64-cpu-gcc.yml  linux-riscv64-cpu-gcc.yml  linux-x64-cpu-clang-python.yml  linux-x64-cpu-clang.yml  linux-x64-cpu-gcc.yml  linux-x64-gpu-clang-python.yml  linux-x64-gpu-clang.yml  linux-x64-gpu-gcc.yml  linux-x86-cpu-clang.yml  linux-x86-cpu-gcc.yml  macos-arm64-cpu.yml  macos-arm64-gpu.yml  macos-x64-cpu-python.yml  macos-x64-cpu.yml  macos-x64-gpu.yml  release-python.yml  release.yml  test-coverage.yml  web-assembly.yml  windows-x64-cpu-vs2015.yml  windows-x64-cpu-vs2017.yml  windows-x64-cpu-vs2019-python.yml  (+6 more)
benchmark/: CMakeLists.txt  benchcold.cpp  benchcolddeploy.cpp  benchmark_memory_footprint.cpp  benchncnn.cpp  benchncnn1.bak.cpp  benchncnn1.cpp  benchncnn_.cpp  benchncnntest.bak.cpp  benchncnntest.cpp  benchncnntest_.cpp
benchmark/benchmark_models/: alexnet.param  crnn_lite.param  googlenet.param
cmake/: ncnn_add_layer.cmake
scripts/: build-arm64-v8a.sh  deployed_arm64.sh  deployed_jetson.sh  get_output.py  init_arm64.sh  init_jetson.sh  install_jetson.sh  output.csv  run_arm64.sh  run_jetson.sh
src/: CMakeLists.txt  allocator.h  command.cpp  datareader.cpp  datareader.h  gpu.cpp  mat.cpp  mat.h  modelbin.h  net_new.cpp  net_new.h  pipeline.cpp  pipeline.h  pipelinecache.cpp  pipelinecache.h
src/layer/: convolution.cpp
src/layer/arm/: convolution_1x1.h  convolution_3x3_pack4.h  convolution_5x5.h  convolution_7x7_pack1to4.h  convolution_arm.cpp  file_arm.cpp  (+6 more)
(+1 files in other folders)
